# kineticFoam

./: .swp  CMakeLists.txt
solvers/kineticFoam/: .UEqns.H.swp  CMakeLists.txt  UEqns.H  createFields.H  kineticFoam.C  pEqn.H
solvers/kineticFoamP/: CMakeLists.txt  UEqns.H  createFields.H  kineticFoam.C  pEqn.H
solvers/kineticFoamPeriodic/: CMakeLists.txt  UEqns.H  pEqn.H
src/kineticFluidModel/: .kineticFluidModel.C.swp  CMakeLists.txt  kineticFluidModel.C  kineticFluidModel.H
src/kineticFluidModel/relaxationTime/: .constantModel.C.swp  .turbulentModel.C.swp  .turbulentModel.H.swp  constantModel.C  constantModel.H  fullModel.C  fullModel.H  relaxationTime.C  relaxationTime.H  turbulentModel.C  turbulentModel.H
src/kineticModel/: .CMakeLists.txt.swp  CMakeLists.txt  kineticModel.C  kineticModel.H
src/kineticModel/relaxationTime/: relaxationTime.C  relaxationTime.H
utilities/kineticTheoryPostProc/: .kineticTheoryPostProc.C.swp  CMakeLists.txt  createFields.H  kineticTheoryPostProc.C
utilities/setParabolicAlpha/: CMakeLists.txt  createFields.H  setParabolicAlpha.C
